[package]
name = "sea-orm-poem-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "api", "service", "entity", "migration"]

[dependencies]
poem-example-api = { path = "api" }

[patch.crates-io]
sea-query = { git = "https://github.com/SeaQL/sea-query", branch = "sqlx-0.8" }
sea-query-binder = { git = "https://github.com/SeaQL/sea-query", branch = "sqlx-0.8" }
