[package]
name = "sea-orm-proxy-cloudflare-worker-example"
version = "0.1.0"
authors = ["Langyo <langyo.china@gmail.com>"]
edition = "2021"
publish = false

[workspace]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
async-trait = "0.1"

worker = { version = "0.3.0", features = ['http', 'axum', "d1"] }
worker-macros = { version = "0.3.0", features = ['http'] }
axum = { version = "0.7", default-features = false, features = ["macros"] }
tower-service = "0.3.2"

chrono = "0.4"
uuid = { version = "1", features = ["v4"] }

console_error_panic_hook = { version = "0.1" }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = { version = "0.4" }
gloo = "0.11"
oneshot = "0.1"

sea-orm = { path = "../../", default-features = false, features = [
    "macros",
    "proxy",
    "with-uuid",
    "with-chrono",
    "with-json",
    "debug-print",
] }

[patch.crates-io]
# https://github.com/cloudflare/workers-rs/pull/591
worker = { git = "https://github.com/cloudflare/workers-rs.git", rev = "ff2e6a0fd58b7e7b4b7651aba46e04067597eb03" }
