[package]
authors      = ["bjn7 <https://github.com/bjn7>", "Langyo <langyo.china@gmail.com>"]
edition      = "2024"
name         = "sea-orm-proxy-cloudflare-worker-example"
publish      = false
rust-version = "1.85.0"
version      = "0.1.0"

[workspace]

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

axum          = { version = "0.7", default-features = false, features = ["macros"] }
tower-service = "0.3.2"
worker        = { version = "0.7.5", features = ['http', 'axum', "d1"] }
worker-macros = { version = "0.7.5", features = ['http'] }

chrono = "0.4"
uuid   = { version = "1", features = ["v4", "js"] }

console_error_panic_hook = { version = "0.1" }
wasm-bindgen             = "0.2.92"
wasm-bindgen-futures     = { version = "0.4" }

sea-orm = { path = "../../", default-features = false, features = [
    "macros",
    "proxy",
    "with-uuid",
    "with-chrono",
    "with-json",
    "debug-print",
] }
