[package]
authors      = ["Langyo <langyo.china@gmail.com>"]
edition      = "2024"
name         = "sea-orm-proxy-gluesql-example"
publish      = false
rust-version = "1.85.0"
version      = "0.1.0"

[workspace]

[dependencies]
async-std    = { version = "1.12", features = ["attributes", "tokio1"] }
async-stream = { version = "0.3" }
async-trait  = { version = "0.1" }
futures      = { version = "0.3" }
futures-util = { version = "0.3" }
serde        = { version = "1" }
serde_json   = { version = "1" }

gluesql = { version = "0.15", default-features = false, features = [
    "memory-storage",
] }
sea-orm = { path = "../../", default-features = false, features = [
    "macros",
    "proxy",
    "debug-print",
] }
sqlparser = "0.40"

[dev-dependencies]
smol       = { version = "1.2" }
smol-potat = { version = "1.1" }

[patch.crates-io]
sea-query = { git = "https://github.com/Huliiiiii/sea-query", branch = "value-array" }
sea-query-sqlx = { git = "https://github.com/Huliiiiii/sea-query", branch = "value-array" }
