[package]
name = "sea-orm-proxy-surrealdb-example"
version = "0.1.0"
authors = ["Langyo <langyo.china@gmail.com>"]
edition = "2021"
publish = false

[workspace]
members = ["."]

[dependencies]
async-std = { version = "1.12", features = ["attributes", "tokio1"] }
serde_json = { version = "1" }
serde = { version = "1" }
futures = { version = "0.3" }
async-stream = { version = "0.3" }
futures-util = { version = "0.3" }

sea-orm = { path = "../../", features = [
  "sqlx-all",
  "proxy",
  "runtime-async-std-native-tls",
  "debug-print",
] }
surrealdb = { version = "1", features = ["kv-mem"] }
