[package]
name = "sea-orm-proxy-wasmtime-example"
version = "0.1.0"
authors = ["Langyo <langyo.china@gmail.com>"]
edition = "2021"
publish = false
build = "build.rs"

[workspace]
members = [".", "module"]
resolver = "2"

[dependencies]
anyhow = "1"
bytes = "1"
async-trait = "0.1"
ron = "0.8"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking"] }
lazy_static = "1"
flume = "0.11"
async-std = { version = "1", features = ["attributes", "tokio1"] }

wit-component = "0.16"
wasmtime = { version = "13", features = ["component-model"] }
wasmtime-wasi = "13"
surrealdb = { version = "1", features = ["kv-mem"] }
